--- a/YaadLife-Lite-FIXED/index.html
+++ b/YaadLife-Lite-FIXED/index.html
@@ -121,7 +121,8 @@ document.addEventListener('DOMContentLoaded', () => {
         {name:"Harbor View Apt",price:80,source:"Airbnb",img:"https://images.unsplash.com/photo-1522706323590-d12735f6b2d4?w=400",type:"coastal"},
         {name:"Kingston Roots GH",price:100,source:"Local",img:"https://images.unsplash.com/photo-1512918728675-ed5a9ecdebfd?w=400",type:"inland"}
       ],
-      "st-andrew": [{name:"Blue Mountain Cabin",price:200,source:"Local",img:"https://images.unsplash.com/photo-1505843513577-22bb7d21e455?w=400",type:"inland"}]
+      "st-andrew": [{name:"Blue Mountain Cabin",price:200,source:"Local",img:"https://images.unsplash.com/photo-1505843513577-22bb7d21e455?w=400",type:"inland"}],
+      "st-thomas": [{name:"GoldenEye Retreat",price:350,source:"Luxury",img:"https://images.unsplash.com/photo-1578683015141-0b574b7b71e3?w=400",type:"coastal"}]
     },
     transport: { kingston: [{name:"Lynk Airport → City",price:25},{name:"JUTC Bus",price:2},{name:"Private Driver",price:80}] },
     tours: { kingston: [{name:"Bob Marley Museum",price:30},{name:"Devon House Tour",price:20},{name:"Trench Town",price:25}] }
@@ -137,83 +138,65 @@ document.addEventListener('DOMContentLoaded', () => {
   };
 
   const renderParishes = () => {
-    const container = document.getElementById('parish-options');
-    container.innerHTML = '';
+    const c = document.getElementById('parish-options'); c.innerHTML = '';
     parishes.forEach(p => {
-      const card = document.createElement('div');
-      card.className = 'option-card';
+      const card = document.createElement('div'); card.className = 'option-card';
       card.innerHTML = `<div class="info"><div class="name">${p.replace(/-/g,' ').toUpperCase()}</div></div>`;
       card.onclick = () => {
-        document.querySelectorAll('#parish-options .option-card').forEach(c => c.classList.remove('selected'));
-        card.classList.add('selected');
-        state.parish = p;
+        document.querySelectorAll('#parish-options .option-card').forEach(x => x.classList.remove('selected'));
+        card.classList.add('selected'); state.parish = p;
         document.getElementById('parish-next').style.display = 'block';
       };
-      container.appendChild(card);
+      c.appendChild(card);
     });
   };
 
   const loadStays = () => {
-    const container = document.getElementById('stay-options');
-    container.innerHTML = '<p style="text-align:center;color:#666">Loading stays...</p>';
+    const c = document.getElementById('stay-options'); c.innerHTML = '<p style="text-align:center;color:#666">Loading stays...</p>';
     setTimeout(() => {
-      container.innerHTML = '';
-      const items = MOCK.accommodations[state.parish] || [];
-      const filtered = state.vibe ? items.filter(i => i.type === state.vibe) : items;
-      filtered.forEach(item => {
-        const card = document.createElement('div');
-        card.className = 'option-card';
+      c.innerHTML = '';
+      const items = (MOCK.accommodations[state.parish] || []).filter(i => !state.vibe || i.type === state.vibe);
+      items.forEach(item => {
+        const card = document.createElement('div'); card.className = 'option-card';
         card.innerHTML = `<img src="${item.img}" onerror="this.src='https://images.unsplash.com/photo-1506929562872-bb421503ef21?w=400'"><div class="info"><div class="name">${item.name}</div><div class="source">${item.source}</div><div class="price">$${item.price}/night</div></div>`;
         card.onclick = () => {
-          document.querySelectorAll('#stay-options .option-card').forEach(c => c.classList.remove('selected'));
-          card.classList.add('selected');
-          state.stay = {...item, fee: Math.round(item.price * 0.05)};
+          document.querySelectorAll('#stay-options .option-card').forEach(x => x.classList.remove('selected'));
+          card.classList.add('selected'); state.stay = {...item, fee: Math.round(item.price * 0.05)};
         };
-        container.appendChild(card);
+        c.appendChild(card);
       });
-    }, 300);
+    }, 400);
   };
 
   const loadTransport = () => {
-    const container = document.getElementById('transport-options');
-    container.innerHTML = '';
+    const c = document.getElementById('transport-options'); c.innerHTML = '';
     (MOCK.transport[state.parish] || MOCK.transport.kingston).forEach(t => {
-      const card = document.createElement('div');
-      card.className = 'option-card';
+      const card = document.createElement('div'); card.className = 'option-card';
       card.innerHTML = `<div class="info"><div class="name">${t.name}</div><div class="price">$${t.price}</div></div>`;
-      card.onclick = () => {
-        card.classList.toggle('selected');
+      card.onclick = () => { card.classList.toggle('selected'); 
         if (card.classList.contains('selected')) state.transport.push(t);
         else state.transport = state.transport.filter(x => x.name !== t.name);
       };
-      container.appendChild(card);
+      c.appendChild(card);
     });
   };
 
   const loadTours = () => {
-    const container = document.getElementById('tour-options');
-    container.innerHTML = '';
+    const c = document.getElementById('tour-options'); c.innerHTML = '';
     MOCK.tours.kingston.forEach(t => {
-      const card = document.createElement('div');
-      card.className = 'option-card';
+      const card = document.createElement('div'); card.className = 'option-card';
       card.innerHTML = `<div class="info"><div class="name">${t.name}</div><div class="price">$${t.price}</div></div>`;
-      card.onclick = () => {
-        card.classList.toggle('selected');
+      card.onclick = () => { card.classList.toggle('selected');
         if (card.classList.contains('selected')) state.tours.push(t);
         else state.tours = state.tours.filter(x => x.name !== t.name);
       };
-      container.appendChild(card);
+      c.appendChild(card);
     });
   };
 
   const showSummary = () => {
-    const div = document.getElementById('summary-items');
-    div.innerHTML = '';
-    let total = 0;
-    const add = (label, price, fee = 0) => {
-      total += price + fee;
-      div.innerHTML += `<div class="item"><span>${label}</span><span>$${price}${fee ? ` + <strong>$${fee}</strong> fee` : ''}</span></div>`;
-    };
+    const div = document.getElementById('summary-items'); div.innerHTML = ''; let total = 0;
+    const add = (l, p, f=0) => { total += p + f; div.innerHTML += `<div class="item"><span>${l}</span><span>$${p}${f ? ` + <strong>$${f}</strong> fee` : ''}</span></div>`; };
     if (state.stay) add(`${state.stay.name} (1 night)`, state.stay.price, state.stay.fee);
     state.transport.forEach(t => add(t.name, t.price));
     state.tours.forEach(t => add(t.name, t.price));
@@ -223,68 +206,35 @@ document.addEventListener('DOMContentLoaded', () => {
 
   const payNow = () => {
     const total = parseFloat(document.getElementById('total').textContent) || 0;
-    if (total === 0) return alert('Add something to your package first!');
-    const sbt = {id: Date.now(), user: 'YaadUser-' + Math.random().toString(36).substr(2,6), package: {...state, total}, timestamp: new Date().toISOString()};
-    const blob = new Blob([JSON.stringify(sbt, null, 2)], {type: 'application/json'});
-    const url = URL.createObjectURL(blob);
-    const a = document.createElement('a'); a.href = url; a.download = `yaadlife-${sbt.id}.json`; a.click();
-    const qrArea = document.getElementById('qr-area');
-    qrArea.innerHTML = '<h3 style="text-align:center;margin:20px 0">Your SBT is ready!</h3><div class="qr-grid"></div>';
-    const items = [];
-    if (state.stay) items.push(`Stay: ${state.stay.name}`);
-    state.transport.forEach(t => items.push(`Ride: ${t.name}`));
-    state.tours.forEach(t => items.push(`Tour: ${t.name}`));
-    items.push(`Total: $${total.toFixed(2)}`);
-    items.forEach(txt => {
-      const div = document.createElement('div'); div.className = 'qr-item';
-      const qr = document.createElement('div');
-      new QRCode(qr, {text: txt, width:130, height:130});
-      div.appendChild(qr);
-      div.innerHTML += `<p>${txt}</p>`;
-      qrArea.querySelector('.qr-grid').appendChild(div);
+    if (total === 0) return alert('Add something first!');
+    const sbt = {id: Date.now(), user: 'YaadUser-'+Math.random().toString(36).substr(2,6), package: {...state, total}, timestamp: new Date().toISOString()};
+    const a = document.createElement('a'); a.href = URL.createObjectURL(new Blob([JSON.stringify(sbt,null,2)], {type:'application/json'}));
+    a.download = `yaadlife-${sbt.id}.json`; a.click();
+    const qrArea = document.getElementById('qr-area'); qrArea.innerHTML = '<h3 style="text-align:center;margin:20px 0">Your SBT + QR Codes</h3><div class="qr-grid"></div>';
+    ['Stay: '+state.stay?.name, ...state.transport.map(t=>`Ride: ${t.name}`), ...state.tours.map(t=>`Tour: ${t.name}`), `Total: $${total.toFixed(2)}`].forEach(txt => {
+      const d = document.createElement('div'); d.className = 'qr-item';
+      const q = document.createElement('div'); new QRCode(q, {text: txt, width:130, height:130});
+      d.appendChild(q); d.innerHTML += `<p>${txt}</p>`;
+      qrArea.querySelector('.qr-grid').appendChild(d);
     });
     alert('SBT downloaded + QR codes ready!');
   };
 
-  // ALL BUTTONS
+  // BUTTONS
   document.getElementById('start-button').onclick = () => nextStep(1);
-  document.getElementById('step1').addEventListener('click', e => {
-    const card = e.target.closest('.option-card');
-    if (card) {
-      document.querySelectorAll('#step1 .option-card').forEach(c => c.classList.remove('selected'));
-      card.classList.add('selected');
-      nextStep(card.dataset.value === 'yes' ? 2 : 4);
-    }
-  });
+  document.getElementById('step1').addEventListener('click', e => { const c = e.target.closest('.option-card'); if(c){ document.querySelectorAll('#step1 .option-card').forEach(x=>x.classList.remove('selected')); c.classList.add('selected'); nextStep(c.dataset.value==='yes'?2:4); }});
   document.getElementById('btn-step2').onclick = () => { state.from = document.getElementById('fromCity').value || "Unknown"; nextStep(3); };
   document.getElementById('btn-step3').onclick = () => { state.arrive = document.getElementById('arriveDate').value; nextStep(4); renderParishes(); };
   document.getElementById('parish-next').onclick = () => { if(state.parish) nextStep(5); };
-  document.getElementById('btn-vibe').onclick = () => {
-    const sel = document.querySelector('#step5 .option-card.selected');
-    if (!sel) return alert('Choose vibe!'); state.vibe = sel.dataset.value; loadStays(); nextStep(6);
-  };
+  document.getElementById('btn-vibe').onclick = () => { const s = document.querySelector('#step5 .option-card.selected'); if(!s) return alert('Choose vibe!'); state.vibe = s.dataset.value; loadStays(); nextStep(6); };
   document.getElementById('btn-stay').onclick = () => { if(!state.stay) return alert('Pick a stay!'); loadTransport(); nextStep(7); };
   document.getElementById('btn-transport').onclick = () => nextStep(8);
   document.getElementById('btn-tours').onclick = () => showSummary();
   document.getElementById('btn-pay').onclick = () => payNow();
 
-  document.getElementById('step5').addEventListener('click', e => {
-    const card = e.target.closest('.option-card');
-    if (card) {
-      document.querySelectorAll('#step5 .option-card').forEach(c => c.classList.remove('selected'));
-      card.classList.add('selected');
-    }
-  });
-
-  document.getElementById('step4').addEventListener('click', e => {
-    const card = e.target.closest('.option-card');
-    if (card) {
-      document.querySelectorAll('#parish-options .option-card').forEach(c => c.classList.remove('selected'));
-      card.classList.add('selected');
-      state.parish = card.textContent.trim().toLowerCase().replace(/ /g, '-');
-      document.getElementById('parish-next').style.display = 'block';
-    }
-  });
+  // Vibe & Parish selection
+  document.getElementById('step5').addEventListener('click', e => { const c = e.target.closest('.option-card'); if(c){ document.querySelectorAll('#step5 .option-card').forEach(x=>x.classList.remove('selected')); c.classList.add('selected'); }});
+  document.getElementById('step4').addEventListener('click', e => { const c = e.target.closest('.option-card'); if(c){ document.querySelectorAll('#parish-options .option-card').forEach(x=>x.classList.remove('selected')); c.classList.add('selected'); state.parish = c.textContent.trim().toLowerCase().replace(/ /g,'-'); document.getElementById('parish-next').style.display = 'block'; }});
 });
 </script>
 </body>
